# fn0

./: README.md  TODO.md  tiered-control.md
fn0/: Cargo.toml  build.rs  cli.md
fn0/examples/: onejs_example.rs
fn0/js/: bootstrap.js
fn0/scripts/: bundle_apis.sh
fn0/src/: deployment.rs  execute.rs  lib.rs  main.rs  metrics.rs  one.rs  onejs.rs  onejs_ops.rs  tcp_listener.rs  telemetry.rs
fn0/src/list_neighbors/: mod.rs  oci.rs
hq/: Cargo.toml  Dockerfile  README.md  TODO  build.rs  hq-args.schema.json
hq/src/: args.rs  args_parse.rs  deployment_db.rs  health_checker.rs  host_connection.rs  main.rs  random_sleep.rs  reaper.rs  telemetry.rs
hq/src/dns/: cloudflare.rs  mod.rs
hq/src/host_infra/: mod.rs
hq/src/host_provider/: mod.rs  oci_container.rs
hq/src/site/: dns_sync.rs  list_host.rs  mod.rs  reaper.rs  recv_pong.rs  send_ping.rs
hq/src/watchdog/: context.rs  host_id.rs  mod.rs  scaling.rs  task_orchestrator.rs
hq/src/watchdog/dns/: cloudflare.rs  mod.rs
hq/src/watchdog/health_recorder/: mod.rs  update_health_record.rs
hq/src/watchdog/host_infra/: mod.rs  oci.rs
oci-lambda-proxy/: Cargo.toml
oci-lambda-proxy/src/: lib.rs  main.rs
oci-rust-sdk/: .gitignore  CLAUDE.md  Cargo.toml  GENERATING_SDK.md  generate-sdk.sh
oci-rust-sdk/.github/workflows/: publish.yml
oci-rust-sdk/data/: services-metadata.json
oci-rust-sdk/data/parsed/: containerinstances-client.json  containerinstances-models.json  core-models.json
oci-rust-sdk/docs/: ADDING_SERVICES.md  TESTING.md
oci-rust-sdk/examples/: container_instance_lifecycle.rs  launch_instance_configuration.rs  list_container_instances.rs  list_instances.rs  list_public_ips.rs  resource_search.rs  simple_auth.rs  simple_container_instance.rs  test_lifecycle_state.rs  using_traits.rs
oci-rust-sdk/src/: lib.rs
oci-rust-sdk/src/auth/: instance_principals.rs  simple.rs
oci-rust-sdk/src/compute/: mod.rs
oci-rust-sdk/src/compute/models/: create_vnic_details.rs  enums.rs  instance.rs  instance_source_details.rs  launch_instance_details.rs  mod.rs
oci-rust-sdk/src/compute/requests/: launch_instance.rs  launch_instance_configuration.rs  list_instances.rs  mod.rs  terminate_instance.rs
oci-rust-sdk/src/container_instances/models/: container_instance.rs  create_container_instance_details.rs
oci-rust-sdk/src/containerinstances/: mod.rs  mod_generated.rs
oci-rust-sdk/src/containerinstances/models/: action_type.rs  basic_image_pull_secret.rs  change_container_instance_compartment_details.rs  container.rs  container_capabilities.rs  container_capabilities_add_capabilities.rs  container_capabilities_drop_capabilities.rs  container_capability.rs  container_capability_type.rs  container_collection.rs  container_config_file.rs  container_config_file_volume.rs  container_dns_config.rs  container_empty_dir_volume.rs  container_empty_dir_volume_backing_store.rs  container_health_check.rs  container_health_check_failure_action.rs  container_health_check_status.rs  container_health_check_type.rs  container_http_health_check.rs  container_instance.rs  container_instance_collection.rs  container_instance_container.rs  container_instance_container_restart_policy.rs  container_instance_lifecycle_state.rs  container_instance_shape_collection.rs  container_instance_shape_config.rs  container_instance_shape_summary.rs  container_instance_summary.rs  container_lifecycle_state.rs  container_resource_config.rs  container_summary.rs  container_tcp_health_check.rs  container_vnic.rs  container_volume.rs  container_volume_type.rs  create_basic_image_pull_secret_details.rs  create_container_config_file_volume_details.rs  create_container_details.rs  create_container_dns_config_details.rs  (+36 more)
oci-rust-sdk/src/containerinstances/requests/: change_container_instance_compartment_request.rs  create_container_instance_request.rs  delete_container_instance_request.rs  get_container_instance_request.rs  get_container_request.rs  get_work_request_request.rs  list_container_instance_shapes_request.rs  list_container_instances_request.rs  list_container_instances_request_sort_by.rs  list_containers_request.rs  list_containers_request_sort_by.rs  list_work_request_errors_request.rs  list_work_request_errors_request_sort_by.rs  list_work_request_logs_request.rs  list_work_request_logs_request_sort_by.rs  list_work_requests_request.rs  list_work_requests_request_sort_by.rs  mod.rs  restart_container_instance_request.rs  retrieve_logs_request.rs  start_container_instance_request.rs  stop_container_instance_request.rs  update_container_instance_request.rs  update_container_request.rs
oci-rust-sdk/src/containerinstances/responses/: change_container_instance_compartment_response.rs  create_container_instance_response.rs  delete_container_instance_response.rs  get_container_instance_response.rs  get_container_response.rs  get_work_request_response.rs  list_container_instance_shapes_response.rs  list_container_instances_response.rs  list_containers_response.rs  list_work_request_errors_response.rs  list_work_request_logs_response.rs  list_work_requests_response.rs  mod.rs  restart_container_instance_response.rs  retrieve_logs_response.rs  start_container_instance_response.rs  stop_container_instance_response.rs  update_container_response.rs  (+1 more)
oci-rust-sdk/src/core/: error.rs  mod.rs  region.rs  retry.rs
oci-rust-sdk/src/os_management_hub/: mod.rs
oci-rust-sdk/src/resource_search/: mod.rs
oci-rust-sdk/src/resourcesearch/: mod.rs
oci-rust-sdk/src/virtual_network/: mod.rs
oci-rust-sdk/tools/parser/: generate-client.ts  parse-client.ts  parse-models.ts
(+2231 files in other folders)
