[package]
name = "hq"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
wiremock = "0.6"
