[package]
name = "oci-lambda-proxy"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
aws-config = "1.8.11"
aws-sdk-lambda = "1.110.0"
base64 = "0.22.1"
color-eyre = "0.6.5"
lambda_runtime = "1.0.1"
oci-rust-sdk = { path = "../oci-rust-sdk", features = ["compute"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
