[package]
name = "oci-rust-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OCI Rust SDK Contributors"]

[features]
default = []
os_management_hub = []

[dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
pem = "3"
http = "1"
url = "2"
thiserror = "1"
anyhow = "1"
configparser = "3"
dirs = "5"
urlencoding = "2"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["test-util"] }

[[example]]
name = "using_traits"
required-features = ["os_management_hub"]
